Fix example of setting classpath scope from the cli

--- a/examples/example-exec-or-java-change-classpath-scope.html
+++ b/examples/example-exec-or-java-change-classpath-scope.html
@@ -87,7 +87,7 @@
         &lt;/configuration&gt;</pre></div>
 <p>or, on the command line,</p>
 <div>
-<pre>mvn exec:exec [...] -Dexec.classpathScope=&quot;java&quot;</pre></div></div>
+<pre>mvn exec:java [...] -Dexec.classpathScope=&quot;test&quot;</pre></div></div>
         </div>
       </div>
     </div>
